<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="100sp"
        android:paddingBottom="100sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:text="@string/tb" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="139dp"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:inputType="text"></EditText>

        <EditText
            android:id="@+id/editTextalmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextelp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="27dp"
            android:ems="10" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="52dp"
            android:layout_marginBottom="4dp"
            android:text="@string/nm"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextelp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="165dp"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="62dp"
            android:layout_marginBottom="248dp"
            android:onClick="run"
            android:text="@string/save"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignBottom="@+id/editTextalmt"
            android:layout_marginLeft="-9dp"
            android:layout_marginBottom="-2dp"
            android:text="@string/al"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignBottom="@+id/editTextmail"
            android:layout_marginLeft="-8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextalmt"

            android:layout_marginLeft="140dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignBottom="@+id/editTextelp"
            android:layout_marginLeft="-11dp"
            android:layout_marginBottom="11dp"
            android:text="@string/telp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextmail"

            android:layout_marginLeft="140dp"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:inputType="text" />
    </RelativeLayout>
</ScrollView>


